--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <table>
           <tbody>
             <tr>
-              <td class="img-align"><img src="images/yosemite.jpg" width="400px"></td>
+              <td class="img-align"><img src="images/yosemite.JPG" width="400px"></td>
               <td class="adjust"> <h3> Nature </h3> <p> When I don't sit behind the computer, I love to be outside, hiking, watching wildlife, do yoga or run. One of the nicest hikes I did was the Glacier Point hike in Yosemite Park earlier this year.</p> </td>
             </tr>
             <tr>
@@ -49,7 +49,7 @@
                 <a href="https://www.facebook.com/events/2081919015163297/" target="_blank"> 27th October at Volta</a>.</p></td>
               </tr>
               <tr>
-                <td class="img-align"><img src="images/unsplash.jpg" width="400px">  </td>
+                <td class="img-align"><img src="images/unsplash.JPG" width="400px">  </td>
                 <td class="adjust"> <h3> Photography</h3><p>Travelling and taking beautiful photos come hand in hand for me. During my self-study of coding, I encountered the unsplash website, where I submitted one of my travel photos. <a href="https://unsplash.com/photos/nrPQ0iLO49A"target="_blank">This photo </a>has over 4 million views and counting. Unsplash is a cool source for beautiful hi-res photos. </p></td>
               </tr>
             </tbody>
